# Clockstar-Firmware

./: .gitignore  .gitmodules  CMakeLists.txt  ESP-IDF.patch  LovyanGFX.patch  README.md  partitions.csv  sdkconfig
examples/: IMU.cpp  (+6 more)
main/: CMakeLists.txt  Kconfig.projbuild  LVGLMalloc.hpp  main.cpp
main/src/: Color.h  Filepaths.hpp  Pins.cpp  Pins.hpp
main/src/BLE/: BLE.cpp  BLE.h  Char.cpp  Char.h  CharInfo.cpp  CharInfo.h  Client.cpp  Client.h  ConConf.cpp  ConConf.h  ConMan.cpp  ConMan.h  GAP.cpp  GAP.h  Server.cpp  Server.h  Service.cpp  Service.h  ServiceInfo.cpp  ServiceInfo.h  UART.cpp  UART.h
main/src/Devices/: Battery.cpp  Battery.h  BatteryV2.cpp  BatteryV2.h  ChirpSystem.cpp  ChirpSystem.h  Display.cpp  Display.h  IMU.cpp  IMU.h  Input.cpp  Input.h  LEDController.cpp  LEDController.h  RTC.cpp  RTC.h
main/src/Drivers/: lsm6ds3tr-c_reg.c  lsm6ds3tr-c_reg.h
main/src/FS/: FSFileImpl.cpp  FSFileImpl.h  File.cpp  File.h  FileImpl.h  RamFile.cpp  RamFile.h  SPIFFS.cpp  SPIFFS.h
main/src/Fusion/: Filter.cpp  Filter.h  Madgwick.cpp  Madgwick.h  Mahony.cpp  Mahony.h
main/src/GIF/: GIF.cpp  GIF.h  GIFSprite.cpp  GIFSprite.h  gifdec.cpp  gifdec.h
main/src/JigHWTest/: JigHWTest.cpp  JigHWTest.h  SPIFFSChecksum.hpp
main/src/LV_Interface/: FSLVGL.cpp  FSLVGL.h  InputLVGL.cpp  InputLVGL.h  LVGIF.cpp  LVGIF.h  LVGL.cpp  LVGL.h  LVModal.cpp  LVModal.h  LVObject.cpp  LVObject.h  LVScreen.cpp  LVScreen.h  LVSelectable.cpp  LVSelectable.h  LVStyle.cpp  LVStyle.h
main/src/Notifs/: Bangle.cpp  Bangle.h  CurrentTime.cpp  CurrentTime.h  Notif.cpp  Notif.h  NotifSource.cpp  NotifSource.h  Phone.cpp  Phone.h
main/src/Periph/: ADC.cpp  ADC.h  ADC1.cpp  ADC1.h  ADC2.cpp  ADC2.h  Bluetooth.cpp  Bluetooth.h  I2C.cpp  I2C.h  PWM.cpp  PWM.h  PinOut.cpp  PinOut.h  Timer.cpp  Timer.h
main/src/Screens/: Level.cpp  Level.h  MainMenu.cpp  MainMenu.h  ShutdownScreen.cpp  ShutdownScreen.h  Theremin.cpp  Theremin.h
(+176 files in other folders)
