file(GLOB_RECURSE SOURCES "src/**.cpp" "src/**.c")

if(CONFIG_CM_BUILD_FIRMWARE)
    set(ENTRY "main.cpp")
elseif(CONFIG_CM_EXAMPLE_ANCS)
    set(ENTRY "../examples/ancs.cpp")
elseif(CONFIG_CM_EXAMPLE_GATT_SERVER)
    set(ENTRY "../examples/GATT_Server.cpp")
elseif(CONFIG_CM_EXAMPLE_GYRO)
    file(GLOB_RECURSE ENTRY "../examples/Gyro/**.cpp")
    list(APPEND ENTRY "../examples/Gyro/main.cpp")
elseif(CONFIG_CM_TEST_SLEEP)
    set(ENTRY "../examples/Sleep.cpp")
endif()

idf_component_register(SRCS ${ENTRY} ${SOURCES} INCLUDE_DIRS "src")
